Update motd. Fix z-index overlaps

--- a/css/boot.css
+++ b/css/boot.css
@@ -29,7 +29,7 @@
 #boottext {
   padding-left: 5px;
   overflow: hidden;
-  height: 290px;
+  height: 210px;
   animation: writeit 0.75s steps(18) 2s forwards;
   margin: 0;
 }
