--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,6 @@ body {
     width: 1024px;
     height: 768px;
     border-color: beige;
-    border-radius: 3%;
     border-image-source: repeating-linear-gradient(0deg,hsl(0deg 0% 95%),hsl(0deg 0% 95%) 2px,hsl(0deg 0% 90%) 0 4px);
     border-image-slice: 25;
     background-color: black;
@@ -30,7 +29,6 @@ body {
     bottom: -60px;
     border: 10px solid #171717;
     border-radius: 30px;
-    z-index: 1;
 }
 
 #monitor::after {
@@ -43,7 +41,7 @@ body {
     border: 10px solid;
     border-color: hsl(0deg 0% 80%) hsl(0deg 0% 95%) hsl(0deg 0% 90%)  hsl(0deg 0% 75%);
     border-radius: 30px;
-    z-index: 2;
+    pointer-events: none;
 }
 
 #screen {
@@ -53,7 +51,6 @@ body {
     width: 100%;
     border: 10px solid black;
     box-sizing: border-box;
-    z-index: 2;
     cursor: url(../img/cursor.svg), auto;
     visibility: hidden;
     animation: appear 0s steps(1) 1s forwards;
@@ -69,7 +66,7 @@ body {
     padding: 5px 5px 1px 5px;
     text-align: center;
     visibility: hidden;
-    animation: appear 0s steps(1) 3.5s forwards;
+    animation: appear 0s steps(1) 3s forwards;
 }
 
 @keyframes appear {
